lib/misc/ace.pas


      function AdsDDRevokePermission( hAdminConn: ADSHANDLE;
                                      usObjectType: UNSIGNED16;
                                      pucObjectName: PAceChar;
                                      pucParentName: PAceChar;
                                      pucGrantee: PAceChar;
                                      ulPermissions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDSetDatabaseProperty( hDictionary: ADSHANDLE;
                                         usPropertyID: UNSIGNED16;
                                         pvProperty: pointer;
                                         usPropertyLen: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDSetFieldProperty( hDictionary: ADSHANDLE;
                                      pucTableName: PAceChar;
                                      pucFieldName: PAceChar;
                                      usPropertyID: UNSIGNED16;
                                      pvProperty: pointer;
                                      usPropertyLen: UNSIGNED16;
                                      usValidateOption: UNSIGNED16;
                                      pucFailTable: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDSetProcedureProperty( hDictionary: ADSHANDLE;
                                          pucProcedureName: PAceChar;
                                          usPropertyID: UNSIGNED16;
                                          pvProperty: pointer;
                                          usPropertyLen: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDSetTableProperty( hDictionary: ADSHANDLE;
                                      pucTableName: PAceChar;
                                      usPropertyID: UNSIGNED16;
                                      pvProperty: pointer;
                                      usPropertyLen: UNSIGNED16;
                                      usValidateOption: UNSIGNED16;
                                      pucFailTable: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDSetUserGroupProperty( hDictionary: ADSHANDLE;
                                          pucUserGroupName: PAceChar;
                                          usPropertyID: UNSIGNED16;
                                          pvProperty: pointer;
                                          usPropertyLen: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDSetUserProperty( hDictionary: ADSHANDLE;
                                     pucUserName: PAceChar;
                                     usPropertyID: UNSIGNED16;
                                     pvProperty: pointer;
                                     usPropertyLen: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDSetViewProperty( hDictionary: ADSHANDLE;
                                     pucViewName: PAceChar;
                                     usPropertyID: UNSIGNED16;
                                     pvProperty: pointer;
                                     usPropertyLen: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDSetObjectAccessRights( hDictionary: ADSHANDLE;
                                           pucObjectName: PAceChar;
                                           pucAccessorName: PAceChar;
                                           pucAllowedAccess: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDAddProcedure( hDictionary: ADSHANDLE;
                                  pucName: PAceChar;
                                  pucContainer: PAceChar;
                                  pucProcName: PAceChar;
                                  ulInvokeOption: UNSIGNED32;
                                  pucInParams: PAceChar;
                                  pucOutParams: PAceChar;
                                  pucComments: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDAddProcedure100( hDictionary: ADSHANDLE;
                                     pucName: PAceChar;
                                     pwcContainer: PWideChar;
                                     pucProcName: PAceChar;
                                     ulInvokeOption: UNSIGNED32;
                                     pucInParams: PAceChar;
                                     pucOutParams: PAceChar;
                                     pucComments: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDAddTable( hDictionary: ADSHANDLE;
                              pucTableName: PAceChar;
                              pucTablePath: PAceChar;
                              usTableType: UNSIGNED16;
                              usCharType: UNSIGNED16;
                              pucIndexFiles: PAceChar;
                              pucComments: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDAddTable90( hDictionary: ADSHANDLE;
                                pucTableName: PAceChar;
                                pucTablePath: PAceChar;
                                usTableType: UNSIGNED16;
                                usCharType: UNSIGNED16;
                                pucIndexFiles: PAceChar;
                                pucComments: PAceChar;
                                pucCollation: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDAddView( hDictionary: ADSHANDLE;
                             pucName: PAceChar;
                             pucComments: PAceChar;
                             pucSQL: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDAddView100( hDictionary: ADSHANDLE;
                                pucName: PAceChar;
                                pucComments: PAceChar;
                                pwcSQL: PWideChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreateTrigger( hDictionary: ADSHANDLE;
                                   pucName: PAceChar;
                                   pucTableName: PAceChar;
                                   ulTriggerType: UNSIGNED32;
                                   ulEventTypes: UNSIGNED32;
                                   ulContainerType: UNSIGNED32;
                                   pucContainer: PAceChar;
                                   pucFunctionName: PAceChar;
                                   ulPriority: UNSIGNED32;
                                   pucComments: PAceChar;
                                   ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreateTrigger100( hDictionary: ADSHANDLE;
                                      pucName: PAceChar;
                                      pucTableName: PAceChar;
                                      ulTriggerType: UNSIGNED32;
                                      ulEventTypes: UNSIGNED32;
                                      ulContainerType: UNSIGNED32;
                                      pwcContainer: PWideChar;
                                      pucFunctionName: PAceChar;
                                      ulPriority: UNSIGNED32;
                                      pucComments: PAceChar;
                                      ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDRemoveTrigger( hDictionary: ADSHANDLE;
                                   pucName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDAddIndexFile( hDictionary: ADSHANDLE;
                                  pucTableName: PAceChar;
                                  pucIndexFilePath: PAceChar;
                                  pucComment: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreateUser( hDictionary: ADSHANDLE;
                                pucGroupName: PAceChar;
                                pucUserName: PAceChar;
                                pucPassword: PAceChar;
                                pucDescription: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDAddUserToGroup( hDictionary: ADSHANDLE;
                                    pucGroupName: PAceChar;
                                    pucUserName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDRemoveUserFromGroup( hDictionary: ADSHANDLE;
                                         pucGroupName: PAceChar;
                                         pucUserName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDDeleteUser( hDictionary: ADSHANDLE;
                                pucUserName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreateUserGroup( hDictionary: ADSHANDLE;
                                     pucGroupName: PAceChar;
                                     pucDescription: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDDeleteUserGroup( hDictionary: ADSHANDLE;
                                     pucGroupName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDDeleteIndex( hDictionary: ADSHANDLE;
                                 pucTableName: PAceChar;
                                 pucIndexName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDRemoveIndexFile( hDictionary: ADSHANDLE;
                                     pucTableName: PAceChar;
                                     pucIndexFileName: PAceChar;
                                     usDeleteFile: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDRemoveProcedure( hDictionary: ADSHANDLE;
                                     pucName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDRemoveTable( hObject: ADSHANDLE;
                                 pucTableName: PAceChar;
                                 usDeleteFiles: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDRemoveView( hDictionary: ADSHANDLE;
                                pucName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDRenameObject( hDictionary: ADSHANDLE;
                                  pucObjectName: PAceChar;
                                  pucNewObjectName: PAceChar;
                                  usObjectType: UNSIGNED16;
                                  ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDMoveObjectFile( hDictionary: ADSHANDLE;
                                    usObjectType: UNSIGNED16;
                                    pucObjectName: PAceChar;
                                    pucNewPath: PAceChar;
                                    pucIndexFiles: PAceChar;
                                    pucParent: PAceChar;
                                    ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
